# SSAE-CODI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: codi_gpt2_stage1.yaml  katana_stage1.env.sh
data/: gsm8k_debug.jsonl
jobs/: run_latent_gen.pbs  train_sae.pbs
scripts/: run_stage1_capture.ps1  run_stage1_smoke.ps1  setup_stage1.ps1
src/: build_dataset.py  config.py  data.py  inspect_latent.py  io.py  io_utils.py  load_model.py  logging_utils.py  model_loader.py  prepare_data.py  run_inference.py  sae.py  train_sae.py
src/ssae_codi.egg-info/: PKG-INFO
src/stage1/: config.py  inspect_latent.py  io.py  load_model.py  logging_utils.py  run_inference.py
tests/: test_sae.py  test_smoke.py  test_stage1_smoke.py
