[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssae-codi"
version = "0.1.0"
description = "Smoke-test-first CODI scaffold for Katana."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=3.6.0",
  "huggingface-hub>=0.24.0",
  "protobuf>=5.27.0",
  "safetensors>=0.4.5",
  "sentencepiece>=0.2.0",
  "tiktoken>=0.9.0",
  "torch>=2.4.0",
  "transformers>=4.44.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config", "io_utils", "load_model", "logging_utils", "run_inference", "inspect_latent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
